--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ Your comfort matters, and your coffee is just a tap away.
        
         <div class="container" id="about" style="display: none;">
             <h2><b>About Us: </b></h2>
-            <p>This is our project for Introduction to Computing (Short Thesis)</p>
+            <p>We are students. <br> We created this platform as a project for our Introduction to computing course.</p>
+            <br>
+            <p>Our Goal is to apply what we've learned through out our journey to a real buiness</p>
          </div>
 
 
@@ -178,4 +180,5 @@ Your comfort matters, and your coffee is just a tap away.
             }
         </script>
     </body>
+
 </html>
