--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="nav-container">
-        <img src="logo/logo.png" alt="Amare's Coffee Shop" class="logo">
+        <img src="logo/new logo.png" alt="Amare's Coffee Shop" class="logo">
         <div class="nav">
             <button onclick="window.location.href='index.html'">Back to Menu</button>
         </div>
@@ -88,4 +88,5 @@
         });
     </script>
 </body>
+
 </html>
