Fix HTML encoding and add favicon link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Amare's Coffee Shop</title>
+        <link rel="icon" href="logo/logo-left.jpg">
+    <title>Amares Coffee Shop</title>
     </head>
 
     <body>
@@ -182,3 +183,4 @@ Your comfort matters, and your coffee is just a tap away.
     </body>
 
 </html>
+
