--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="logo/logo-left.jpg">
     <title>Checkout - Amares Coffee Shop</title>
 </head>
 <body>
@@ -90,4 +91,5 @@
 </body>
 
 </html>
+
 
