--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-        <link rel="icon" href="logo/amare-logo.jpg">
+        <link rel="icon" href="logo/amare-logo.png">
     <title>Amares Coffee Shop</title>
     </head>
 
@@ -183,5 +183,6 @@ Your comfort matters, and your coffee is just a tap away.
     </body>
 
 </html>
+
 
 
