--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="logo/logo-left.jpg">
+    <link rel="icon" href="logo/amare-logo.png">
     <title>Checkout - Amares Coffee Shop</title>
 </head>
 <body>
@@ -91,5 +91,6 @@
 </body>
 
 </html>
+
 
 
