--- a/checkout.html
+++ b/checkout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="logo/amare-logo.png">
-    <title>Checkout - Amares Coffee Shop</title>
+    <title>Checkout - Amare's Coffee Shop</title>
 </head>
 <body>
 
@@ -89,8 +89,4 @@
         });
     </script>
 </body>
-
 </html>
-
-
-
